--- a/homework/src/style/Navbar.css
+++ b/homework/src/style/Navbar.css
@@ -33,13 +33,7 @@
     padding-top: 10px;
 }
 
-.authorization{
-    color: royalblue;
-    padding: .2em 1em;
-}
 
-.authorization:hover{
-    color: #000;
-    background-color: #fff;
-    cursor: pointer;
+#navbar h1{
+    margin-top: -5px;
 }
